deploy/kubernetes/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: jujube
  labels:
    app.kubernetes.io/name: jujube-platform
    app.kubernetes.io/part-of: jujube
